# filewatcherpp

./: CMakeLists.txt  LICENSE  README.md  filewatcherpp.hpp
Src/: filewatcherpp.hpp
Test/: main.cpp
